[package]
name = "gru"
version = "0.1.0"
authors = ["Carlos Morgado <carlos primatas.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = { version = "0.5.3", features = ["ws", "headers", "http2"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
headers = "0.3"
minion_msg = { version = "0.1.0", path = "../minion_msg" }
async-trait = "0.1.53"
enum_dispatch = "0.3.8"
futures = "0.3.21"
